[metadata]
name = arg_cat
version = 1.0.3
author = Luna Gao
author_email = gao.xue.qi@qq.com
description = Params from arg and environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/LunaGao/arg_cat
project_urls =
    Bug Tracker = https://github.com/LunaGao/arg_cat/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src